# video-stitcher

./: .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc  AGENTS.md  CALIBRATION_FIX.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  RVFC_PROTOTYPE.md  RVFC_TESTING.md  THIRD_PARTY_NOTICES.md  calibration_adjusted.json  deny.toml  match.json  package-lock.json  package.json  rust-toolchain.toml
crates/reco-autocam/: Cargo.toml  README.md
crates/reco-autocam/src/: clustering.rs  detection_filters.rs  detector.rs  director.rs  gpu_detector.rs  lib.rs  metal_detector.rs  roi_filter.rs  smoother.rs  tracker.rs  tracking_mode.rs  wgpu_detector.rs
crates/reco-autocam/src/directors/: anticipation.rs  ball.rs  deadzone.rs  field.rs  mod.rs  sweep.rs  util.rs
crates/reco-autocam/src/panners/: anticipator.rs  ball.rs  deadzone.rs  field.rs  file_panner.rs  lookahead.rs  mod.rs  smoother.rs  sweep.rs
crates/reco-autocam/src/trackers/: ball.rs  class_provider.rs  mod.rs  player.rs
crates/reco-calibrate/: Cargo.toml  README.md
crates/reco-calibrate/examples/: dump_points.rs  dump_undistorted.rs  optimize_points.rs  sweep_cam_d.rs
crates/reco-calibrate/src/: audio_sync.rs  defaults.rs  error.rs  features.rs  filter.rs  geometry.rs  lens_database.rs  lib.rs  live.rs  optimizer.rs  pipeline.rs  ransac.rs  sampling.rs  telemetry.rs  traits.rs  types.rs  video.rs
crates/reco-calibrate/src/akaze/: contrast_factor.rs  derivatives.rs  descriptors.rs  detector_response.rs  evolution.rs  fed_tau.rs  image.rs  mod.rs  nonlinear_diffusion.rs  scale_space_extrema.rs
crates/reco-calibrate/tests/: calibrate_videos.rs  regression.rs
crates/reco-calibrate/tests/data/: dji_action4.json  gopro10_4k.json  xtu_max3_4k.json
crates/reco-cli/: Cargo.toml  README.md
crates/reco-cli/examples/: vram_leak_repro.rs
crates/reco-cli/src/: calibrate.rs  camera.rs  helpers.rs  libcamera_cmd.rs  main.rs  preview.rs  snapshot.rs  stitch.rs
crates/reco-control/: Cargo.toml  README.md
crates/reco-control/src/: gopro.rs  intent_translator.rs  keyboard.rs  lib.rs  mobile.rs  pose_control.rs  websocket.rs
crates/reco-control/src/gopro/: constants.rs  error.rs  http.rs  mod.rs  status.rs
crates/reco-core/: Cargo.toml  README.md
crates/reco-core/src/: analyze.rs  async_encode.rs  bayer.rs  calibration.rs  color_grade.rs  coreml_inference.rs  cuda_interop.rs  cuda_kernels.rs  d3d11_interop.rs  detection_filter.rs  detector.rs  director.rs  dmabuf_import.rs  dx12_cuda_interop.rs  encoder.rs  framesync.rs  gpu.rs  gpu_diffusion.rs  lens.rs  lens_preview.rs  lib.rs  metal_compute.rs  metal_interop.rs  npp_interop.rs  nv12_converter.rs  nv12_downscale.rs  nvbuf_transform.rs  output.rs  panner.rs  pipeline.rs  pipeline_event.rs  planes.rs  pose_control.rs  projection.rs  renderer.rs  rgba_readback.rs  rig_correction.rs  scene.rs  session.rs  source.rs  (+9 more)
crates/reco-core/src/core/: mod.rs  pose.rs  render.rs  replay_buffer.rs  replay_management.rs  types.rs
crates/reco-core/src/detect/: detector.rs  director.rs  filter.rs  mod.rs  panner.rs  pipeline_event.rs  tracker.rs
crates/reco-core/src/gpu/: color_grade.rs  mod.rs  nv12_converter.rs  rgba_readback.rs  yuv_stack_packer.rs
crates/reco-core/src/interop/: cuda.rs  d3d11.rs  dmabuf.rs  metal.rs  mod.rs  vulkan.rs  zero_copy.rs
crates/reco-core/src/lens/: mod.rs  preview.rs  rig_correction.rs  undistort.rs
crates/reco-core/src/projection/: coverage.rs  geometry.rs  mod.rs  virtual_camera.rs
crates/reco-core/src/render/: mod.rs  pipeline.rs  renderer.rs  scene.rs  stitch_renderer.rs  viewport.rs
crates/reco-core/src/session/: detection.rs  detection_dispatch.rs  frame_buffer.rs  frame_processing.rs  live.rs  lookahead.rs  mod.rs  run_loop.rs  smoother.rs  tests.rs  types.rs  vram_pool.rs  wiring.rs  zero_copy_gpu.rs  zero_copy_linux.rs  zero_copy_macos.rs
crates/reco-core/src/shaders/: bayer_demosaic.wgsl  color_grade.wgsl  cylindrical_mono.wgsl  fed_diffusion.wgsl  fisheye.wgsl  nv12_downscale.wgsl  pm_g2.wgsl  rgba_to_gray.wgsl  rgba_to_nv12.wgsl  separable_filter.wgsl  yuv420p_stack_pack.wgsl
crates/reco-core/src/stitch/: backend.rs  cpu.rs  geometry.rs  mod.rs
crates/reco-detect/: Cargo.toml  README.md  build.rs
crates/reco-detect/csrc/: tensorrt_wrapper.cpp
crates/reco-detect/examples/: bench_inference.rs
crates/reco-detect/src/: cuda_kernels.rs  lib.rs  metal_compute.rs  npp_interop.rs  ort_session.rs  probe.rs  wgpu_preprocess.rs
crates/reco-detect/src/detectors/: cpu.rs  metal.rs  mod.rs  ncnn.rs  ort_gpu.rs
crates/reco-ffmpeg/: Cargo.toml
crates/reco-ffmpeg/src/: decoder.rs  encoder.rs  lib.rs
crates/reco-gpu-interop/: Cargo.toml
crates/reco-gpu-interop/src/: lib.rs
crates/reco-gui/: Cargo.toml  FRICTION.md  README.md  build.rs
crates/reco-gui/src/: export.rs  main.rs  playback.rs  preview.rs  roi_overlay.rs  settings.rs  telemetry_client.rs  toast.rs
crates/reco-gui/ui/: main.slint
crates/reco-heatmap/: Cargo.toml  FRICTION.md  README.md
crates/reco-heatmap/src/: lib.rs  main.rs
crates/reco-highlights/: Cargo.toml  FRICTION.md  README.md
crates/reco-highlights/src/: lib.rs  main.rs
crates/reco-io/: Cargo.toml  README.md
crates/reco-io/src/: adapters.rs  analyze_job.rs  jsonl_sink.rs  lib.rs  libcamera.rs  output.rs  settings.rs  smart_source.rs  stacked_video.rs  stitch_job.rs  v4l2.rs  zero_copy.rs
crates/reco-io/src/ffmpeg/: calibration_io.rs  decoder.rs  encoder.rs  hw_upload.rs  (+1 more)
crates/reco-io/tests/: calibration_io.rs  stacked_video_roundtrip.rs
crates/reco-obs/: Cargo.toml  FRICTION.md  README.md  build.rs
crates/reco-obs/src/: blog_shim.c  ffi.rs  lib.rs  obs_log.rs  source.rs
crates/reco-stats/: Cargo.toml  FRICTION.md  README.md
crates/reco-stats/src/: lib.rs  main.rs
crates/reco-tensorrt/: Cargo.toml  build.rs
crates/reco-tensorrt/csrc/: tensorrt_wrapper.h
crates/reco-tensorrt/src/: cuda.rs  engine.rs  lib.rs  sys.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: calibration_json.rs  input_path.rs  onnx_names.rs
(+7031 files in other folders)
