[workspace]
resolver = "3"
members = [
    "crates/reco-core",
    "crates/reco-cli",
    "crates/reco-io",
    "crates/reco-autocam",
    "crates/reco-calibrate",
    "crates/reco-detect",
    "crates/reco-gui",
    "crates/reco-obs",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "AGPL-3.0-only"
repository = "https://github.com/reco-project/video-stitcher"

[workspace.dependencies]
tracing = "0.1"

# SPIKE: wgpu 28 interop with Slint. Fork removed; if wgpu 28 doesn't
# have the shaderDrawParameters regression, no patch is needed.
