[package]
name = "reco-autocam"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Automatic camera control for reco: YOLO ball detector, EMA smoothing, ball-tracking director"

[dependencies]
reco-core = { path = "../reco-core" }
ort = "2.0.0-rc.12"
dirs = "6"
log = "0.4"

[features]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
load-dynamic = ["ort/load-dynamic"]
tensorrt-native = ["dep:reco-tensorrt"]
profiling = ["reco-core/profiling", "reco-tensorrt?/profiling", "dep:tracing"]

[dependencies.reco-tensorrt]
path = "../reco-tensorrt"
optional = true

[dependencies.tracing]
workspace = true
optional = true
