[package]
name = "reco-autocam"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Automatic camera control for reco: YOLO ball detector, EMA smoothing, ball-tracking director"

[dependencies]
reco-core = { path = "../reco-core" }
reco-detect = { path = "../reco-detect" }
log = "0.4"

[features]
cuda = ["reco-detect/cuda"]
tensorrt = ["reco-detect/tensorrt"]
coreml = ["reco-detect/coreml"]
load-dynamic = ["reco-detect/load-dynamic"]
tensorrt-native = ["reco-detect/tensorrt-native"]
ncnn = ["reco-detect/ncnn"]
profiling = ["reco-core/profiling", "reco-detect/profiling", "dep:tracing"]

[dependencies.tracing]
workspace = true
optional = true
