[package]
publish = false
name = "reco-autocam"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Automatic camera control for reco: YOLO ball detector, EMA smoothing, ball-tracking director"

[dependencies]
reco-core = { path = "../reco-core" }
# default-features = false so consumers can choose a detection
# backend explicitly (ort / tensorrt-native / ncnn / etc.) without
# reco-detect's `default = ["ort"]` sneaking ort in via feature
# unification. Needed for Jetson builds where prebuilt ort-sys
# references glibc symbols the Tegra host doesn't have.
reco-detect = { path = "../reco-detect", default-features = false }
wgpu = "29"
log = "0.4"

[features]
# Preserve pre-refactor behavior: autocam's default build still
# enables the ort (CPU) backend so no existing consumer regresses.
# Jetson / custom builds opt out via `--no-default-features
# --features tensorrt-native` (or ncnn).
default = ["ort"]
ort = ["reco-detect/ort"]
cuda = ["reco-detect/cuda"]
tensorrt = ["reco-detect/tensorrt"]
coreml = ["reco-detect/coreml"]
load-dynamic = ["reco-detect/load-dynamic"]
tensorrt-native = ["reco-detect/tensorrt-native"]
ncnn = ["reco-detect/ncnn"]
profiling = ["reco-core/profiling", "reco-detect/profiling", "dep:tracing"]

[dependencies.tracing]
workspace = true
optional = true
