[package]
name = "reco-calibrate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stereo camera calibration for reco: feature matching and position optimization"

[dependencies]
reco-core = { path = "../reco-core" }
akaze = { git = "https://github.com/Christopher22/akaze.git" }
cobyla = "1.0"
image = "0.25"
inlier = "0.1"
log = "0.4"
nalgebra = "0.33"
rand = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
pollster = "0.4"
reco-io = { path = "../reco-io" }
