[package]
name = "reco-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "CLI tool for Reco panoramic video stitching"
license = "AGPL-3.0-only"
repository = "https://github.com/reco-project/video-stitcher"

[[bin]]
name = "reco"
path = "src/main.rs"

[features]
default = ["autocam"]
autocam = ["dep:reco-autocam"]
cuda = ["autocam", "reco-autocam/cuda"]
tensorrt = ["autocam", "reco-autocam/tensorrt"]
coreml = ["autocam", "reco-autocam/coreml"]
load-dynamic = ["autocam", "reco-autocam/load-dynamic"]
tensorrt-native = ["autocam", "reco-autocam/tensorrt-native"]
ncnn = ["autocam", "reco-autocam/ncnn"]
gstreamer = ["reco-io/gstreamer"]
libcamera = ["reco-io/libcamera"]
rpi = ["reco-io/rpi"]
profiling = ["reco-core/profiling", "reco-io/profiling", "reco-calibrate/profiling", "reco-autocam?/profiling", "tracing", "tracing-subscriber", "tracing-chrome"]

[dependencies]
reco-core = { path = "../reco-core" }
reco-io = { path = "../reco-io", features = ["ffmpeg"] }
reco-autocam = { path = "../reco-autocam", optional = true }
reco-calibrate = { path = "../reco-calibrate", features = ["io"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
serde_json = "1"
pollster = "0.4"
winit = "0.30"
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["registry"] }
tracing-chrome = { version = "0.7", optional = true }
ctrlc = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
