[package]
publish = false
name = "reco-control"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport-agnostic control vocabulary for Reco (keyboard, gamepad, GoPro USB, mobile app, WebSocket)"

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------
#
# The crate ships with one trivial transport (`keyboard`) enabled by
# default. Other transports are feature-gated so headless / embedded
# consumers pay only for what they use. Today all of
# `gopro`/`mobile`/`websocket` are `todo!()` scaffolds — they exist so
# the layout is visible and the feature-matrix CI exercises the gates.
[features]
default = ["keyboard"]
keyboard = []
gopro = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio"]
mobile = []
websocket = []

[dependencies]
reco-core = { path = "../reco-core" }
log = "0.4"
thiserror = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
