[package]
publish = false
name = "reco-control"
version = "0.5.3-beta.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator pose-control state machine and intent dispatch for Reco"

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------
#
# `gopro` is an optional device helper (pulls in reqwest/tokio); off by
# default so headless / embedded builds stay lean.
[features]
default = []
gopro = ["dep:reqwest", "dep:tokio"]

[dependencies]
reco-core = { path = "../reco-core" }
log = "0.4"
thiserror = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"], optional = true }
