[package]
name = "reco-core"
version = "0.1.0"
edition = "2024"
description = "GPU-accelerated panoramic video stitching engine"
license = "AGPL-3.0-only"
repository = "https://github.com/reco-project/video-stitcher"
readme = "README.md"

[features]
profiling = ["tracing"]

[dependencies]
wgpu = { version = "29", features = ["vulkan-portability"] }
ash = "0.38"
libloading = "0.9"
bytemuck = { version = "1", features = ["derive"] }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
pollster = "0.4"
tracing = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
env_logger = "0.11"
libc = "0.2"
