[package]
name = "reco-core"
version = "0.1.0"
edition = "2024"
description = "GPU-accelerated panoramic video stitching engine"
license = "AGPL-3.0-only"
repository = "https://github.com/reco-project/video-stitcher"
readme = "README.md"

[features]
profiling = ["tracing"]

[dependencies]
wgpu = { version = "29", features = ["vulkan-portability"] }
bytemuck = { version = "1", features = ["derive"] }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
pollster = "0.4"
tracing = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
libloading = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-metal = "0.3"
objc2-foundation = "0.3"
objc2-core-ml = { version = "0.3", features = [
    "MLModel", "MLMultiArray", "MLFeatureValue", "MLFeatureProvider",
    "MLDictionaryFeatureProvider", "MLModelConfiguration",
] }
block2 = "0.6"

[dev-dependencies]
approx = "0.5"
env_logger = "0.11"
libc = "0.2"
