[package]
name = "reco-detect"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Detection backends for reco: YOLO (CPU/GPU/TensorRT/Metal), future motion/color detectors"
links = "tensorrt_wrapper"

[features]
default = ["ort"]
ort = ["dep:ort", "dep:dirs"]
cuda = ["ort", "ort/cuda"]
tensorrt = ["ort", "ort/tensorrt"]
coreml = ["ort", "ort/coreml"]
load-dynamic = ["ort", "ort/load-dynamic"]
tensorrt-native = []
ncnn = []
profiling = ["reco-core/profiling", "dep:tracing"]

[dependencies]
reco-core = { path = "../reco-core" }
ort = { version = "2.0.0-rc.12", optional = true }
dirs = { version = "6", optional = true }
log = "0.4"
tracing = { workspace = true, optional = true }

[build-dependencies]
cc = "1"
