[package]
name = "reco-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Slint-based GUI for Reco panoramic video stitcher"

[[bin]]
name = "reco-gui"
path = "src/main.rs"

[features]
default = ["autocam"]
autocam = ["dep:reco-autocam"]
tensorrt = ["autocam", "reco-autocam/tensorrt"]
cuda = ["autocam", "reco-autocam/cuda"]
coreml = ["autocam", "reco-autocam/coreml"]
profiling = ["reco-core/profiling", "reco-io/profiling", "reco-calibrate/profiling"]

[dependencies]
reco-core = { path = "../reco-core" }
reco-io = { path = "../reco-io", features = ["ffmpeg", "config"] }
serde = { version = "1", features = ["derive"] }
reco-calibrate = { path = "../reco-calibrate", features = ["io"] }
reco-detect = { path = "../reco-detect" }
reco-autocam = { path = "../reco-autocam", optional = true }

slint = { version = "~1.15", features = ["unstable-wgpu-28"] }
rfd = "0.15"
# M2 tracing migration: tracing-subscriber replaces env_logger.
# tracing-log bridges legacy `log::*` calls to the tracing pipeline.
log = "0.4"
anyhow = "1"
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[build-dependencies]
slint-build = "1.15"
