[package]
publish = false
name = "reco-gui"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Slint-based GUI for Reco panoramic video stitcher"

[[bin]]
name = "reco-gui"
path = "src/main.rs"

[features]
# Default gives ort CPU detection, matching pre-refactor behavior.
# Jetson / custom builds opt out via --no-default-features +
# explicit backend (tensorrt-native, ncnn).
default = ["autocam", "ort"]
autocam = ["dep:reco-autocam"]
ort = ["autocam", "reco-autocam/ort"]
tensorrt = ["autocam", "reco-autocam/tensorrt"]
tensorrt-native = ["autocam", "reco-autocam/tensorrt-native"]
ncnn = ["autocam", "reco-autocam/ncnn"]
cuda = ["autocam", "reco-autocam/cuda"]
coreml = ["autocam", "reco-autocam/coreml"]
load-dynamic = ["autocam", "reco-autocam/load-dynamic"]
profiling = ["reco-core/profiling", "reco-io/profiling", "reco-calibrate/profiling"]

[dependencies]
reco-core = { path = "../reco-core" }
reco-control = { path = "../reco-control" }
reco-io = { path = "../reco-io", features = ["ffmpeg", "config", "stacked-output"] }
serde = { version = "1", features = ["derive"] }
reco-calibrate = { path = "../reco-calibrate", features = ["io"] }
# default-features = false so autocam's own default (ort) doesn't
# pull ort on Jetson / tensorrt-native builds. Default feature
# set above re-enables ort for non-Jetson consumers.
reco-detect = { path = "../reco-detect", default-features = false }
reco-autocam = { path = "../reco-autocam", optional = true, default-features = false }

slint = { version = "~1.15", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "renderer-software", "accessibility", "compat-1-2", "unstable-wgpu-28"] }
rfd = "0.15"
# M2 tracing migration: tracing-subscriber replaces env_logger.
# tracing-log bridges legacy `log::*` calls to the tracing pipeline.
log = "0.4"
anyhow = "1"
arboard = "3"
open = "5"
base64 = "0.22"
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[build-dependencies]
slint-build = "1.15"
