[package]
name = "reco-highlights"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Auto-highlight reel generator: emits a JSON EDL of interesting moments from a stitched recording"

[[bin]]
name = "reco-highlights"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:reco-io", "dep:reco-autocam", "dep:clap", "dep:env_logger", "dep:anyhow", "dep:ctrlc"]

[dependencies]
reco-core = { path = "../reco-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# CLI-only deps, gated behind the `cli` feature so the lib can be checked in
# minimal build environments (no FFmpeg / no ORT).
reco-io = { path = "../reco-io", features = ["ffmpeg"], optional = true }
reco-autocam = { path = "../reco-autocam", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1", optional = true }
ctrlc = { version = "3", optional = true }
