[package]
publish = false
name = "reco-io"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Pluggable frame I/O backends for Reco (FFmpeg, GStreamer, ...)"
license = "AGPL-3.0-only"
repository = "https://github.com/reco-project/video-stitcher"

[features]
default = ["ffmpeg"]
ffmpeg = ["dep:ffmpeg-next"]
rpi = ["ffmpeg", "ffmpeg-next/rpi"]
gstreamer = ["dep:gstreamer", "dep:gstreamer-app"]
libcamera = []
profiling = ["tracing", "reco-core/profiling"]
# Opt-in user-preference persistence for consumers. Pulls in serde +
# directories (~150 kB of deps). Consumers that only need frame I/O
# (headless stitching, test harnesses) can skip it.
config = ["dep:serde", "dep:serde_json", "dep:directories"]
# M6.5 stacked-video: enables the ffmpeg-backed StackedEncoder /
# StackedSource wrappers around the pure pack/unpack primitives in
# `stacked_video`. The primitives themselves have no feature gate.
# Requires `ffmpeg`.
stacked-output = ["ffmpeg"]

[dependencies]
reco-core = { path = "../reco-core" }
log = "0.4"
thiserror = "2"
tracing = { workspace = true, optional = true }

# FFmpeg backend
ffmpeg-next = { version = "8", default-features = false, features = ["codec", "format", "software-scaling"], optional = true }

# GStreamer backend
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }

# `config` feature deps.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
directories = { version = "6", optional = true }

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
