[package]
publish = false
name = "reco-io"
version = "0.5.3-beta.2"
edition.workspace = true
rust-version.workspace = true
description = "Pluggable frame I/O backends for Reco (FFmpeg, GStreamer, ...)"
license = "AGPL-3.0-only"
repository = "https://github.com/reco-project/video-stitcher"

[features]
default = ["ffmpeg"]
ffmpeg = ["dep:ffmpeg-next"]
rpi = ["ffmpeg", "ffmpeg-next/rpi"]
gstreamer = ["dep:gstreamer", "dep:gstreamer-app"]
libcamera = []
v4l2 = ["dep:libc"]
profiling = ["tracing", "reco-core/profiling"]
# Opt-in user-preference persistence for consumers. Serde +
# serde_json are unconditional (JsonlSink uses them); this flag
# only gates the `directories` crate and the config plumbing.
config = ["dep:directories"]
# M6.5 stacked-video: enables the ffmpeg-backed StackedEncoder /
# StackedSource wrappers around the pure pack/unpack primitives in
# `stacked_video`. The primitives themselves have no feature gate.
# Requires `ffmpeg`.
stacked-output = ["ffmpeg"]

[dependencies]
reco-core = { path = "../reco-core" }
log = "0.4"
thiserror = "2"
tracing = { workspace = true, optional = true }

# FFmpeg backend
ffmpeg-next = { version = "8", default-features = false, features = ["codec", "format", "software-scaling"], optional = true }

# GStreamer backend
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }

# Serde + serde_json are unconditional because `JsonlSink` (the
# default shipping `PipelineEventSink`) serializes events to JSON
# Lines. `config` also uses them.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = { version = "6", optional = true }
libc = { version = "0.2", optional = true }
tempfile = "3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
