[package]
name = "reco-obs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "OBS Studio source plugin for Reco panoramic video stitching"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
profiling = ["reco-core/profiling", "tracing"]

[dependencies]
reco-core = { path = "../reco-core" }
log = "0.4"
pollster = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true, optional = true }
