[package]
name = "reco-obs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "OBS Studio source plugin for Reco panoramic video stitching"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
profiling = ["reco-core/profiling", "tracing"]

[dependencies]
reco-core = { path = "../reco-core" }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true, optional = true }

[build-dependencies]
# Generates FFI bindings from the installed libobs headers at build time.
# Replaces ~600 lines of hand-written, drift-prone struct layouts in
# src/ffi.rs. In particular this fixes the `obs_source_frame::refs`
# size mismatch (Rust AtomicI32 = 4 bytes vs C `volatile long` = 8 bytes
# on LP64). See deep-review-2026-04-18 T-2 / C2.
bindgen = "0.72"
